--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -44,6 +44,7 @@ jobs:
 
       - name: Install Dependencies & Run Tests
         run: |
+          cd src/services/backend
           npm install
           npm test
 
