--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -13,6 +13,7 @@ on:
       - release
     paths:
       - 'src/services/backend/**'
+      - '.github/workflows/backend.yaml'
     # tags:
     #   - 'v*.*.*' 
   workflow_dispatch:
