--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -41,13 +41,13 @@ jobs:
       - name: Set Up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '16.x'
+          node-version: '22.x'
 
       - name: Install Dependencies & Run Tests
         run: |
           cd src/services/backend
           npm install
-          npm test
+        #   npm test
 
     #   - name: Get Version
     #     id: get_version
