--- a/src/services/backend/ops/helm/backend/templates/hpa.yaml
+++ b/src/services/backend/ops/helm/backend/templates/hpa.yaml
@@ -1,4 +1,4 @@
-{{- if and (not .Values.keda.enabled) .Values.autoscaling.enabled }}
+{{- if .Values.autoscaling.enabled }}
 {{- if semverCompare "<1.23-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: autoscaling/v2beta1
 {{- else -}}
