Add set -xeu to ArgoCD deployment step for improved error handling

--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -100,6 +100,7 @@ jobs:
 
       - name: Deploy via ArgoCD
         run: |
+          set -xeu
           argocd app set $ARGOCD_APP_NAME \
             -p image.tag=$VERSION \
             --server $ARGOCD_SERVER \
