Refactor environment variable handling in Helm templates for consistency

--- a/src/services/backend/ops/helm/backend/templates/deployment.yaml
+++ b/src/services/backend/ops/helm/backend/templates/deployment.yaml
@@ -64,7 +64,6 @@ spec:
           env: 
             {{- toYaml . | nindent 10 }}
           {{- end }}
-          {{- with .Values.envFrom }}
           envFrom:
-            {{- toYaml . | nindent 10 }}
-          {{- end }}
+            - secretRef:
+                name: {{ include "backend.fullname" . }}
