--- a/src/services/backend/ops/helm/backend/templates/external-secrets.yaml
+++ b/src/services/backend/ops/helm/backend/templates/external-secrets.yaml
@@ -2,7 +2,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ include "backend.fullname" . }}
   labels:
     {{- include "backend.labels" . | nindent 4 }}
   annotations:
