Add readiness and liveness probes to webapp deployment configuration

--- a/src/services/webapp/ops/helm/webapp/templates/deployment.yaml
+++ b/src/services/webapp/ops/helm/webapp/templates/deployment.yaml
@@ -64,6 +64,14 @@ spec:
           env: 
             {{- toYaml . | nindent 10 }}
           {{- end }}
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 3000
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 3000
           envFrom:
             - secretRef:
                 name: {{ include "webapp.fullname" . }}
