--- a/src/services/backend/ops/helm/backend/templates/deployment.yaml
+++ b/src/services/backend/ops/helm/backend/templates/deployment.yaml
@@ -64,6 +64,14 @@ spec:
           env: 
             {{- toYaml . | nindent 10 }}
           {{- end }}
+          readinessProbe:
+            httpGet:
+              path: /api/status
+              port: 3000
+          livenessProbe:
+            httpGet:
+              path: /api/status
+              port: 3000
           envFrom:
             - secretRef:
                 name: {{ include "backend.fullname" . }}
