cosmetic changes added

--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -9,7 +9,7 @@ name: Deploy backend
 on:
   push:
     branches: 
-      - main
+      # - main
       - release
     paths:
       - 'src/services/backend/**'
@@ -85,7 +85,7 @@ jobs:
           context: ./src/services/backend/
           file: ./src/services/backend/ops/build/Dockerfile
           push: true
-          tags: "392347600144.dkr.ecr.eu-west-2.amazonaws.com/backend:${{ github.ref_name }}-${{ github.run_id }}.${{ github.run_number }}.${{ github.run_attempt }}"
+          tags: "<AWS_ACC_ID>.dkr.ecr.eu-west-2.amazonaws.com/backend:${{ github.ref_name }}-${{ github.run_id }}.${{ github.run_number }}.${{ github.run_attempt }}"
           # arm64 can be added here
           platforms: linux/amd64
 
