--- a/src/ops/infra/helmfile/manifests/ingress.yaml
+++ b/src/ops/infra/helmfile/manifests/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-2:392347600144:certificate/e5fc3266-dfda-43d2-a7ff-d2e7a655504b"
+    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-2:<AWS_ACC_ID>:certificate/e5fc3266-dfda-43d2-a7ff-d2e7a655504b"
     alb.ingress.kubernetes.io/ssl-redirect: '443'
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: instance
