--- a/src/services/backend/ops/helm/backend/values.yaml
+++ b/src/services/backend/ops/helm/backend/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: 392347600144.dkr.ecr.eu-west-2.amazonaws.com/backend
+  repository: <AWS_ACC_ID>.dkr.ecr.eu-west-2.amazonaws.com/backend
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
