--- a/src/services/webapp/ops/helm/webapp/values.yaml
+++ b/src/services/webapp/ops/helm/webapp/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: 392347600144.dkr.ecr.eu-west-2.amazonaws.com/webapp
+  repository: <AWS_ACC_ID>.dkr.ecr.eu-west-2.amazonaws.com/webapp
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
